[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dev-dependencies]
criterion = "0.3"
smoltcp = "0.8"
arrayvec = "0.7.2"
ctrlc = { version = "3.0", features = ["termination"]}
run-time = {path = "../run-time", package = "run-time"}
run-dpdk = {path = "../run-dpdk", package = "run-dpdk"}
run-packet = {path = "../run-packet", package = "run-packet"}
log = { version = "0.4.4"}
byteorder = "1"
clap = {version="3.1.6", features=["derive"]}
mockalloc = "0.1.2"
env_logger = "0.9"
pnet = "0.31.0"

[[example]]
name = "port_test"
path = "dpdk/port_test.rs"

[[example]]
name = "tx_test"
path = "dpdk/tx_test.rs"

[[example]]
name = "tx_slow"
path = "dpdk/tx_slow.rs"

[[example]]
name = "tx_multiseg_slow"
path = "dpdk/tx_multiseg_slow.rs"

[[example]]
name = "rx_test"
path = "dpdk/rx_test.rs"

[[example]]
name = "rx_print"
path = "dpdk/rx_print.rs"

[[example]]
name = "rx_multiseg_print"
path = "dpdk/rx_multiseg_print.rs"

[[example]]
name = "smoltcp_send_test"
path = "dpdk/smoltcp_send_test.rs"

[[example]]
name = "mbuf_test"
path = "dpdk/mbuf_test.rs"

[[example]]
name = "traffic_gen"
path = "dpdk/traffic_gen.rs"

[[example]]
name = "traffic_fwd"
path = "dpdk/traffic_fwd.rs"

[[example]]
name = "smol_traffic_fwd"
path = "dpdk/smol_traffic_fwd.rs"

[[example]]
name = "tx_tcp"
path = "dpdk/tx_tcp.rs"

[[example]]
name = "lro_test"
path = "dpdk/lro_test.rs"


[[example]]
name = "pbuf"
path = "protocol_stack/pbuf.rs"

[[example]]
name = "pnet"
path = "protocol_stack/pnet.rs"

[[example]]
name = "smol"
path = "protocol_stack/smol.rs"

[[example]]
name = "cursor"
path = "protocol_stack/cursor.rs"

[[example]]
name = "run_tso"
path = "protocol_stack/run_tso.rs"

[[example]]
name = "pnet_csum_offload"
path = "protocol_stack/pnet_csum_offload.rs"

[[example]]
name = "smol_csum_offload"
path = "protocol_stack/smol_csum_offload.rs"

[[example]]
name = "cursor_csum_offload"
path = "protocol_stack/cursor_csum_offload.rs"

[[example]]
name = "pbuf_csum_offload"
path = "protocol_stack/pbuf_csum_offload.rs"
