[package]
name = "run-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
run-time = {path = "../run-time", package = "run-time"}
run-dpdk = {path = "../run-dpdk", package = "run-dpdk"}
run-packet = {path = "../run-packet", package = "run-packet"}
arrayvec = "0.7.2"
log = { version = "0.4.4"}
clap = {version="3.1.6", features=["derive"]}
env_logger = "0.9"
ctrlc = { version = "3.0", features = ["termination"]}
byteorder = "1"
bytes = "1"
smoltcp = "0.8"