[package]
name = "traffic_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
run-packet = { git = "https://github.com/run-rs/run.git", branch = "dev"}
run-dpdk = { git = "https://github.com/run-rs/run.git", branch = "dev" }
pcap = "0.8.1"
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = "0.8.3"
byteorder = "1.4.2"
arrayvec = "0.7.2"
ctrlc = { version = "3.0", features = ["termination"]}
